[UPD] Upgrading Minimal Mistakes template

--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Alvaro Jover"
+  name             : "Alvaro Jover-Alvarez"
   avatar           : assets/images/Meta.png
   bio              : # "I am an **amazing** person."
   location         : # "Somewhere"
