[UPD] Updating profile pic and some more typos

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 Meta:
   name: Alvaro Jover-Alvarez
-  avatar: assets/images/Meta.png
+  avatar: assets/images/Meta.jpg
   twitter: vorixo
   github: vorixo
