--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Alvaro Jover-Alvarez"
-  avatar           : assets/images/Meta.png
+  avatar           : assets/images/Meta.jpg
   bio              : # "I am an **amazing** person."
   location         : # "Somewhere"
   email            :
