--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "default", "dirt"
 locale                   : "en-US"
 title                    : "Devtricks"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Programming and game development blog"
 name                     : "vorixo"
-description              : "Programming and game development blog"
+description              : "Gameplay Programming and Networking tutorials"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Alvaro Jover-Alvarez"
   avatar           : assets/images/Meta.jpg
-  bio              : # "I am an **amazing** person."
+  bio              : "Network Programmer @ CI Games"
   location         : # "Somewhere"
   email            :
   links:
@@ -288,3 +288,6 @@ defaults:
       comments: # true
       share: true
       related: true
+      toc: true
+      toc_label: "Contents"
+      toc_icon: "cog"
