--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description              : "Programming and game development blog"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/vori.png
+teaser                   : "/assets/images/vori.png" # this one appears in the twitter thumbnails
+logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png" - This appears at the left of devtricks
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
