[UPD] Refining lunr search

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : true # true, false (default)
 search                   : true # true, false (default)
-search_full_content      : false # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : lunr # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Alvaro Jover-Alvarez"
-  avatar           : assets/images/Meta.jpg
+  avatar           : "/assets/images/Meta.jpg"
   bio              : "Network Programmer @ CI Games"
   location         : # "Somewhere"
   email            :
