--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,4 +3,5 @@ Meta:
   avatar: assets/images/Meta.jpg
   twitter: vorixo
   github: vorixo
+  linkedin: vorixo
   bio: "Network Programmer @ CI Games"
