[UPD] Updating work info

--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Alvaro Jover-Alvarez"
   avatar           : "/assets/images/Meta.jpg"
-  bio              : "Network Programmer @ CI Games"
+  bio              : "Network Programmer"
   location         : # "Somewhere"
   email            :
   links:
